added many new features
* CharLoader Editor: ability to set default frame width/height for use in all frame animations. useful for spritesheet where all sprites have the same size, allows quickly changing displayed sprite with one click.
* ability to set default delay to be applied when adding a new frame to an animation.
* ability to cut, copy and paste frames from an animation freely, including to other animations.
* added "interpolation" action, allows changing the interpolation easing type to the next frame

--- a/gui-tool/ui/actiontab_companion.ui
+++ b/gui-tool/ui/actiontab_companion.ui
@@ -136,6 +136,32 @@
      </item>
     </layout>
    </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <item>
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Default size for frames
+W / H</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="spinbox_defaultW">
+       <property name="maximum">
+        <number>100000</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="spinbox_defaultH">
+       <property name="maximum">
+        <number>100000</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
   </layout>
  </widget>
  <resources/>
